force-app/main/default/objects/Selling_Activity__c/Selling_Activity__c.object-meta.xml
<CustomObject>
    <description>Selling Activities are presales requests to open up a market prior to the Market Activation Date. The Market Activation date is stored in a separate object called the Selling Activity Market object. These two object combine to create the Selling Activities tool.</description>
    <label>Selling Activity</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Selling Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selling Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>