force-app/main/default/objects/Selling_Activity__c/fields/Average_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>Average_Dispenser__c</fullName>
    <label>Average Dispenser #</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>