force-app/main/default/objects/Selling_Activity__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Selling_Acitvities1</relationshipName>
    <type>Lookup</type>
</CustomField>