force-app/main/default/objects/Selling_Activity__c/fields/Changed_On__c.field-meta.xml
<CustomField>
    <fullName>Changed_On__c</fullName>
    <label>Changed On</label>
    <type>Date</type>
</CustomField>