force-app/main/default/objects/Selling_Activity__c/fields/Disp_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Disp_Configuration__c</fullName>
    <label>Disp. Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drip Tray/Standard Splash plate/Legs</fullName>
            </value>
            <value>
                <fullName>Extended Splash plate no legs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>