force-app/main/default/objects/Selling_Activity__c/fields/Dispenser_Model__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_Model__c</fullName>
    <label>Dispenser Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7000 series</fullName>
            </value>
            <value>
                <fullName>8000/9000 Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>