force-app/main/default/objects/Selling_Activity__c/fields/FS_Dispenser_model__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_model__c</fullName>
    <formula>Text(Market_Name__r.Dispenser_Model__c)</formula>
    <label>Dispenser model</label>
    <type>Text</type>
</CustomField>