force-app/main/default/objects/Selling_Activity__c/fields/FS_Headquarte_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Headquarte_ACN__c</fullName>
    <formula>FS_Headquarter__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACN#</label>
    <type>Text</type>
</CustomField>