force-app/main/default/objects/Selling_Activity__c/fields/FS_Headquarter__c.field-meta.xml
<CustomField>
    <fullName>FS_Headquarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Headquarter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Selling Activity</relationshipLabel>
    <relationshipName>Selling_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>