force-app/main/default/objects/Selling_Activity__c/fields/FS_Of_Dispensers_Sub_Total_Per_Market__c.field-meta.xml
<CustomField>
    <fullName>FS_Of_Dispensers_Sub_Total_Per_Market__c</fullName>
    <formula>FS_Of_Outlets_For_Launch__c  *  Average_Dispenser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Of Dispensers Sub Total/Per Market</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>