force-app/main/default/objects/Selling_Activity__c/fields/FS_Of_Outlets_For_Launch__c.field-meta.xml
<CustomField>
    <fullName>FS_Of_Outlets_For_Launch__c</fullName>
    <label># Of Outlets For Launch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>