force-app/main/default/objects/Selling_Activity__c/fields/Market_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Name</label>
    <referenceTo>Selling_Activity_Market__c</referenceTo>
    <relationshipLabel>Selling Acitvities</relationshipLabel>
    <relationshipName>Selling_Acitvities</relationshipName>
    <type>Lookup</type>
</CustomField>