force-app/main/default/objects/Selling_Activity__c/fields/Requested_Accelerated_Market_Activation__c.field-meta.xml
<CustomField>
    <fullName>Requested_Accelerated_Market_Activation__c</fullName>
    <label>Requested Accelerated Market Activation</label>
    <type>Date</type>
</CustomField>