force-app/main/default/objects/Selling_Activity__c/fields/Selling_Status__c.field-meta.xml
<CustomField>
    <fullName>Selling_Status__c</fullName>
    <label>Selling Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-sold</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Activity Moved to installation Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>