force-app/main/default/objects/Selling_Activity__c/validationRules/FS_Activation_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_Activation_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),Requested_Accelerated_Market_Activation__c &lt; Today())</errorConditionFormula>
    <errorDisplayField>Requested_Accelerated_Market_Activation__c</errorDisplayField>
    <errorMessage>It should not be past date.</errorMessage>
</ValidationRule>