force-app/main/default/objects/Selling_Activity__c/validationRules/FS_Comment_Length_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_Comment_Length_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Comment__c) &gt; 250</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>You can&#39;t enter more than 250 characters</errorMessage>
</ValidationRule>