force-app/main/default/objects/Selling_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FS_Headquarter__c</columns>
    <columns>Market_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>